--- a/temas/dark.css
+++ b/temas/dark.css
@@ -18,4 +18,11 @@
     --primary-txboton-alg-color:rgb(255, 255, 255);
     --primary-txboton-art-color:rgb(255, 255, 255);
 
+    --primary-alert-art-color: #111111;
+    --primary-alert-alg-color: #7a7a7a;
+    --primary-txalert-alg-color:#070707;
+    --primary-txalert-art-color:#ffffff;
+
+
+
 }
